<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/pattern"
tools:context="com.example.mycomputer.a200ribu.MainActivity">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/bar_approaches"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/mybar"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:id="@+id/tv_bar_approach"
            android:text="@string/Before"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/Approaches"
            android:textColor="@color/DarkCyan"
            />

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:orientation="vertical">


        <pl.droidsonroids.gif.GifTextView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:background="@drawable/thinking_bulb"
            android:layout_gravity="center"
            />

        <TextView
            android:theme="@style/Pertanyaan"
            android:id="@+id/b1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b4" />




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/et_essay"
                    android:hint="@string/urutan1"
                    android:focusable="true"
                    android:inputType="textMultiLine"
                    android:gravity="top"
                    />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/et_essay2"
                    android:hint="@string/urutan2"
                    android:focusable="true"
                    android:inputType="textMultiLine"
                    android:gravity="top"
                    />


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/et_essay3"
                    android:hint="@string/urutan3"
                    android:focusable="true"
                    android:inputType="textMultiLine"
                    android:gravity="top"
                    />


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/et_essay4"
                    android:hint="@string/urutan4"
                    android:focusable="true"
                    android:inputType="textMultiLine"
                    android:gravity="top"
                    />



            </LinearLayout>




        <Button
            android:id="@+id/button_continue"
            android:textColor="@color/white"
            android:layout_marginBottom="16dp"
            android:background="@drawable/mybutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/continue_button"
            android:layout_gravity="center" />




    </LinearLayout>

    </ScrollView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>

