<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@drawable/pattern"
tools:context="com.example.mycomputer.a200ribu.MainActivity">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/bar_approaches"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/mybar"
        android:orientation="horizontal"
        android:padding="15dp">

        <TextView
            android:id="@+id/tv_bar_approach"
            android:text="@string/Before"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/Approaches"
            android:textColor="@color/DarkCyan"
            />

    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="10dp"
        android:paddingLeft="10dp"
        android:orientation="vertical">



        <pl.droidsonroids.gif.GifTextView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:background="@drawable/thinking_bulb"
            android:layout_gravity="center"
            />

    <TextView
        android:theme="@style/Pertanyaan"
        android:id="@+id/b2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/b2"
     />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/et_essay"
            android:hint="@string/Jawab"
            android:inputType="textMultiLine"
           />




    <Button
        android:id="@+id/button_continue"
        android:textColor="@color/white"
        android:background="@drawable/mybutton"
        android:layout_width="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_height="wrap_content"
        android:text="@string/continue_button"
        android:layout_gravity="center" />



</LinearLayout>
    </ScrollView>

</LinearLayout>
</android.support.constraint.ConstraintLayout>

