<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/pattern"
    android:id="@+id/hasil"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


<include layout="@layout/header"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:id="@+id/description"
        android:textStyle="bold"

        android:padding="15dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
 >

        <LinearLayout
            android:id="@+id/bungkus_hasil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
         >


            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/gambar_hasil"
                android:layout_width="223dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                />

            <TextView
                android:textSize="90sp"
                android:id="@+id/score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                />
            <TextView
                android:id="@+id/comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="15dp"
                android:textStyle="bold"
                android:text="@string/evaluasi"
                android:textSize="20sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/evaluasi"
                android:id="@+id/button_evaluasi"
                android:textColor="@color/white"
                android:padding="10dp"
                android:background="@drawable/mybutton" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/lihatlog"
                android:id="@+id/button_log"
                android:textColor="@color/white"
                android:background="@drawable/log" />

        </LinearLayout>


    </ScrollView>



</LinearLayout>